# lalafell

./: LICENSE  settings.gradle
app/: build.gradle
app/src/androidTest/java/org/retamia/demo/: ExampleInstrumentedTest.java
app/src/androidTest/java/org/retamia/liveplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  live_player.cpp  live_player.h  live_player_jni.cpp  live_player_type_def.h
app/src/main/cpp/extractor/: rtmp_extractor.cpp  rtmp_extractor.h
app/src/main/cpp/extractor/decoder/: h264_hw_decoder.cpp  h264_hw_decoder.h  media_codec_dequeue_thread.cpp  media_codec_dequeue_thread.h  sps_decode.h
app/src/main/cpp/libs/rtmp/: CMakeLists.txt  rtmp.c
app/src/main/cpp/util/: linked_blocking_queue.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
lalafell/: build.gradle
lalafell/src/main/: AndroidManifest.xml
lalafell/src/main/cpp/: CMakeLists.txt  __android.h  lalafell_player.h  live_player.cpp  live_player.h  live_player_jni.cpp  live_player_type_def.h
lalafell/src/main/cpp/decoder/: h264_hw_decoder.cpp  h264_hw_decoder.h  media_codec_dequeue_thread.h
lalafell/src/main/cpp/extractor/: rtmp_extractor.cpp  rtmp_extractor.h
lalafell/src/main/cpp/extractor/decoder/: h264_hw_decoder.cpp  h264_hw_decoder.h  media_codec_dequeue_thread.cpp
lalafell/src/main/cpp/extractor/renderer/: gl_renderer.cpp  gl_renderer.h
lalafell/src/main/cpp/libs/rtmp/: handshake.h
lalafell/src/main/cpp/oges/: oges_shader.cpp  oges_shader.h
lalafell/src/main/cpp/opengl/: opengl_es_shader_program.cpp  opengl_es_shader_program.h
lalafell/src/main/cpp/renderer/: gl_renderer.cpp  gl_renderer.h
lalafell/src/main/cpp/util/: thread.h
lalafell/src/main/res/values/: strings.xml
lalafell_player/: build.gradle
lalafell_player/src/main/cpp/: CMakeLists.txt  __android.h  lalafell_player.cpp
lalafell_player/src/main/cpp/decoder/: media_codec_dequeue_thread.cpp
lalafell_player/src/main/cpp/extractor/: rtmp_extractor.h
lalafell_player/src/main/cpp/libs/rtmp/: rtmp.c  rtmp.h
lalafell_player/src/main/cpp/oges/: oges_shader.h
lalafell_player/src/main/cpp/renderer/: gl_renderer.cpp  gl_renderer.h
lalafell_player/src/main/cpp/util/: linked_blocking_queue.h  thread.cpp
lalafell_player/src/main/res/values/: strings.xml
lalafell_record/src/main/res/values/: strings.xml
lalafell_recorder/: build.gradle
lalafell_recorder/src/main/: AndroidManifest.xml
lalafell_recorder/src/main/res/layout/: activity_record.xml
lalafell_recorder/src/main/res/raw/: image_fragment.glsl  image_vertex.glsl  test_vertex.glsl
(+31 files in other folders)
